Recyclerview dan navigation drewer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Materi.mu</string>
+
+<!--    Login dan registrasi-->
     <string name="text_email">Email</string>
     <string name="text_password">Password</string>
     <string name="btn_login">Login</string>
@@ -14,16 +16,25 @@
     <string name="text_mulai">Mulai</string>
     <string name="gambar_home">gambar home</string>
     <string name="text_logout">Logout</string>
+
+
     <string name="title_activity_halaman_user">HalamanUserActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
 
+<!--    Recyclerview-->
+    <string name="Title">Ini Title</string>
+    <string name="sub_Title">Sub title</string>
+
+<!--  Navigation drawer activity-->
+    <string name="text_profile">Profile</string>
+    <string name="text_home">Home</string>
+    <string name="text_bookmark">Bookmark</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
