--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Materi.mu</string>
 
-<!--    Login dan registrasi-->
+    <!--    Login dan registrasi-->
     <string name="text_email">Email</string>
     <string name="text_password">Password</string>
     <string name="btn_login">Login</string>
@@ -27,14 +27,27 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
 
-<!--    Recyclerview-->
+    <!--    Recyclerview-->
     <string name="Title">Ini Title</string>
     <string name="sub_Title">Sub title</string>
 
-<!--  Navigation drawer activity-->
+    <!--  Navigation drawer activity-->
     <string name="text_profile">Profile</string>
     <string name="text_home">Home</string>
     <string name="text_bookmark">Bookmark</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="text_Halo_home">Hello HOME</string>
+    <string name="text_Halo_bookmark">Hello Bookmark</string>
+    <string name="text_Halo_Logout">Hello Logout</string>
+    <string name="text_Halo_profile">Hello PROFILE</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="kode">kode</string>
+    <string name="isi">isi</string>
+    <string name="kategori">kategori</string>
+
 </resources>
